# todo-service

./: LICENSE  Makefile  pyproject.toml
todo_service/task_api/: apps.py  models.py
todo_service/task_api/migrations/: 0001_initial.py
todo_service/todo_service/: asgi.py  settings.py  urls.py  wsgi.py
