[tool.poetry]
name = "todo-service"
version = "0.1.0"
description = "A simple todo service"
authors = ["Affonso Brian <contato.affonsobrian@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
djangorestframework = "^3.14.0"
ipython = "^8.12.0"
ipdb = "^0.13.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
